--- a/scss/0.base/_3.variables.scss
+++ b/scss/0.base/_3.variables.scss
@@ -2,10 +2,10 @@
 
 // Breakpoints
 
-$brkpoint-sm: 1px;
-$brkpoint-md: 768px;
-$brkpoint-large: 992px;
-$brkpoint-xlarge: 1260px;
+$brkpoint-xsm: 1px;
+$brkpoint-sm: 768px;
+$brkpoint-md: 992px;
+$brkpoint-lg: 1260px;
 
 // Button Colors
 
