--- a/scss/0.base/_6.base.scss
+++ b/scss/0.base/_6.base.scss
@@ -20,3 +20,19 @@ body {
 *:focus {
   outline: none;
 }
+
+div {
+  display: block;
+}
+
+.flex {
+  display: flex;
+  @include e(services) {
+    padding-left: 15px;
+    padding-right: 15px;
+
+    & a {
+      width: 100%;
+    }
+  }
+}
