--- a/scss/0.base/_5.mixins.scss
+++ b/scss/0.base/_5.mixins.scss
@@ -96,36 +96,20 @@
 // icon mixin
 //
 
-// @mixin icon-style($element, $modifier, $icon, $font-size: null, $font-weight: null, $margin: null, $padding: null, $color: null, $transform-x: null, $transform-y: null) {
-//   @include e(#{$element}) {
-//     @include m(#{$modifier}) {
-//       font-family: "icomoon" !important;
-//       margin: $margin;
-//       padding: $padding;
-//       font-size: $font-size;
-//       font-weight: $font-weight;
-
-//       &:before {
-//         content: icon($icon);
-//         color: $color;
-//         display: inline-block;
-
-//         @if $transform-x and $transform-y {
-//           transform: translate(#{$transform-x}, #{$transform-y});
-//         } @else {
-//           @if $transform-x {
-//             transform: translateX(#{$transform-x});
-//           }
-//           @if $transform-y {
-//             transform: translateY(#{$transform-y});
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-@mixin icon-style($element, $modifier, $icon, $font-size: null, $font-weight: null, $margin: null, $padding: null, $color: null, $translate-x: null, $translate-y: null, $display: inline-block) {
+@mixin icon-style(
+  $element,
+  $modifier,
+  $icon,
+  $font-size: null,
+  $font-weight: null,
+  $margin: null,
+  $padding: null,
+  $color: null,
+  $line-height: null,
+  $translate-x: null,
+  $translate-y: null,
+  $display: inline-block
+) {
   @include e(#{$element}) {
     @include m(#{$modifier}) {
       font-family: "icomoon" !important;
@@ -133,6 +117,7 @@
       padding: $padding;
       font-size: $font-size;
       font-weight: $font-weight;
+      line-height: $line-height;
 
       &:before {
         content: icon($icon);
@@ -149,6 +134,44 @@
             transform: translateY(#{$translate-y});
           }
         }
+      }
+    }
+  }
+}
+
+//
+// Services Panel Hover Mixin
+//
+
+@mixin services-panel-colors($element, $avatar-and-hover-colors, $button-colors: null) {
+  .services-avatar__#{$element} {
+    background-color: $avatar-and-hover-colors;
+  }
+
+  .services-button__#{$element} {
+    color: white;
+
+    @if $button-colors != null {
+      background-color: $button-colors;
+    } @else {
+      background-color: $avatar-and-hover-colors;
+    }
+  }
+
+  .services-panel__#{$element} {
+    &:hover {
+      background-color: $avatar-and-hover-colors;
+      color: white;
+
+      .services-button__#{$element} {
+        color: $avatar-and-hover-colors;
+        background-color: white;
+      }
+      .services-avatar__#{$element} {
+        background-color: white;
+      }
+      .icon__services--#{$element}:before {
+        color: $avatar-and-hover-colors;
       }
     }
   }
